--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,7 @@ h3 {
 }
 .content img {
     margin-right: 20px;
-    width: 150px;  /* Ajuste la taille de l'image */
+    width: 150px;
     height: auto;
 }
 
@@ -46,7 +46,25 @@ h3 {
     transition: 0.5s ease;    
 }
 
-footer {
+footer p{
     text-align: center;
     font-size: xx-small;
+}
+
+a.one:link {
+    display: block;
+    text-align: center;
+}
+
+a.one {
+    display: block;
+    text-align: center;
+    color: black;
+    text-decoration: none;
+    transition: color 1s;
+}
+
+a.one:hover {
+    color: lightgray;
+    font-weight: bold;
 }
