--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -1,3 +1,164 @@
-body{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Arial', sans-serif;
+    color: #f5f5f5;
+    line-height: 1.6;
+    background: linear-gradient(to bottom, #444, #222);
+    padding: 20px;
+}
+
+header {
+    background-color: #333;
+    padding: 20px 0;
     text-align: center;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left-container img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-left: 100%;
+    transition: transform 0.3s ease, width 0.3s ease;
+}
+
+.left-container img:hover {
+    transform: scale(0.9);
+}
+
+
+.right-container h3 {
+    color: #fff;
+    font-size: 2em;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.right-container {
+    margin-right: 30%;
+}
+
+main {
+    margin-top: 20px;
+}
+
+article {
+    margin-bottom: 40px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+section {
+    margin-bottom: 20px;
+}
+
+h2 {
+    font-size: 1.8em;
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 10px;
+    text-decoration: underline;
+}
+
+ul {
+    list-style-type: none;
+    padding-left: 20px;
+}
+
+li {
+    font-size: 1.2em;
+    color: #ddd;
+    margin-bottom: 5px;
+}
+
+footer p {
+    text-align: center;
+    font-size: xx-small;
+    color: #888;
+    margin-top: 40px;
+}
+
+a.one {
+    display: block;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px 20px;
+    margin-top: 20px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    transition: color 1s, background-color 0.3s, transform 0.3s;
+}
+
+
+@media (max-width: 768px) {
+    body {
+        padding: 10px;
+    }
+
+    header h1 {
+        font-size: 2.2em;
+    }
+
+    h2 {
+        font-size: 1.6em;
+    }
+
+    p {
+        font-size: 1em;
+    }
+
+    footer p {
+        font-size: 0.9em;
+    }
+
+    .container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .left-container {
+        margin-bottom: 20px;
+    }
+}
+
+.retour {
+    text-align: center;
+}
+
+.retour button {
+    display: inline-block;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s, transform 0.3s;
+    padding: 10px 20px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    text-align: center;
+    background-color: Transparent;
+}
+
+
+.retour button:hover {
+    color: #222;
+    background-color: #f5f5f5;
+    border-color: #222;
+    transform: scale(1.1);
 }
