--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,8 +18,14 @@ header {
     text-align: center;
     top: 0;
     z-index: 10;
+    border-radius: 8px;
 }
 
+
+header img {
+    border-radius: 8px;
+
+}
 
 
 h1,
@@ -82,6 +88,8 @@ p {
     width: 150px;
     height: auto;
     transition: transform 0.5s ease;
+    border-radius: 8px;
+
 }
 
 .content img:hover {
@@ -118,6 +126,7 @@ a.two {
     border: 2px solid transparent;
     border-radius: 5px;
     transition: color 1s, background-color 0.3s, transform 0.3s;
+    background-color: #333;
 }
 
 a.one:hover,
@@ -141,22 +150,43 @@ a.two:hover {
     }
 
     header h1 {
-        font-size: 2.2em;
+        font-size:larger;
     }
 
     h2 {
-        font-size: 1.6em;
+        font-size:large;
     }
 
     p {
-        font-size: 1em;
+        font-size: small;
     }
 
     footer p {
-        font-size: 0.9em;
+        font-size: xx-small;
     }
-}
 
+    .lien {
+        font-size: small;
+    }
+
+    a.one:active, a.two:active {
+        background-color: white;
+        color: #000;
+    }
+    
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .content img {
+        width: 60%;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+
+}
 
 .loader-container {
     position: fixed;
@@ -206,3 +236,4 @@ a.two:hover {
         display: none;
     }
 }
+
