--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,6 +46,7 @@ h2 {
     margin-bottom: 15px;
     letter-spacing: 1px;
     text-decoration: underline;
+    margin-left: 50px;
 }
 
 h3 {
@@ -114,6 +115,45 @@ footer p {
     margin-top: 40px;
 }
 
+.ademo:hover,
+.nos:hover {
+    color: #5c48cc;
+    cursor: pointer;
+}
+
+.ademo,
+.nos {
+    font-weight: bold;
+    text-decoration: underline;
+    color: #6d8fec;
+}
+
+.ademo-wrapper,
+.nos-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.image-nos,
+.image-ademo {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 150px;
+    height: auto;
+    border-radius: 8px;
+    margin-top: 6px;
+}
+
+.ademo-wrapper:hover .image-ademo {
+    display: block;
+}
+
+.nos-wrapper:hover .image-nos {
+    display: block;
+}
+
 a.one,
 a.two {
     display: block;
@@ -142,6 +182,27 @@ a.two:hover {
 }
 
 
+a.trolley {
+    display: block;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px 20px;
+    margin-top: 20px;
+    border: 2px solid transparent;
+    border-radius: 5px;
+    transition: color 1s, background-color 0.3s, transform 0.3s;
+    background-color: #333;
+}
+
+a.trolley:hover {
+    color: #222;
+    background-color: #f5f5f5;
+    border-color: #222;
+    transform: scale(1.1);
+}
+
 
 
 @media (max-width: 768px) {
@@ -150,11 +211,11 @@ a.two:hover {
     }
 
     header h1 {
-        font-size:larger;
+        font-size: larger;
     }
 
     h2 {
-        font-size:large;
+        font-size: large;
     }
 
     p {
@@ -169,11 +230,12 @@ a.two:hover {
         font-size: small;
     }
 
-    a.one:active, a.two:active {
+    a.one:active,
+    a.two:active {
         background-color: white;
         color: #000;
     }
-    
+
     .content {
         flex-direction: column;
         align-items: center;
@@ -236,4 +298,3 @@ a.two:hover {
         display: none;
     }
 }
-
