--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -103,6 +103,7 @@ p {
     color: #000000;
     background-color: #f5f5f5;
     transform: scale(1.05);
+    cursor: pointer;
 }
 
 @media (max-width: 768px) {
