--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,15 +21,11 @@ header {
     border-radius: 8px;
 }
 
-
 header img {
     border-radius: 8px;
-
 }
 
-
-h1,
-h2 {
+h1, h2 {
     color: #fff;
     font-weight: 700;
     text-transform: uppercase;
@@ -90,7 +86,6 @@ p {
     height: auto;
     transition: transform 0.5s ease;
     border-radius: 8px;
-
 }
 
 .content img:hover {
@@ -115,27 +110,23 @@ footer p {
     margin-top: 40px;
 }
 
-.ademo:hover,
-.nos:hover {
+.ademo:hover, .nos:hover {
     color: #5c48cc;
     cursor: pointer;
 }
 
-.ademo,
-.nos {
+.ademo, .nos {
     font-weight: bold;
     text-decoration: underline;
     color: #6d8fec;
 }
 
-.ademo-wrapper,
-.nos-wrapper {
+.ademo-wrapper, .nos-wrapper {
     position: relative;
     display: inline-block;
 }
 
-.image-nos,
-.image-ademo {
+.image-nos, .image-ademo {
     display: none;
     position: absolute;
     top: 100%;
@@ -154,8 +145,7 @@ footer p {
     display: block;
 }
 
-a.one,
-a.two {
+a.one, a.two, a.trolley {
     display: block;
     text-align: center;
     color: white;
@@ -169,8 +159,7 @@ a.two {
     background-color: #333;
 }
 
-a.one:hover,
-a.two:hover {
+a.one:hover, a.two:hover, a.trolley:hover {
     color: #222;
     background-color: #f5f5f5;
     border-color: #222;
@@ -180,30 +169,6 @@ a.two:hover {
 .lien {
     text-align: center;
 }
-
-
-a.trolley {
-    display: block;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 10px 20px;
-    margin-top: 20px;
-    border: 2px solid transparent;
-    border-radius: 5px;
-    transition: color 1s, background-color 0.3s, transform 0.3s;
-    background-color: #333;
-}
-
-a.trolley:hover {
-    color: #222;
-    background-color: #f5f5f5;
-    border-color: #222;
-    transform: scale(1.1);
-}
-
-
 
 @media (max-width: 768px) {
     body {
@@ -230,8 +195,7 @@ a.trolley:hover {
         font-size: small;
     }
 
-    a.one:active,
-    a.two:active {
+    a.one:active, a.two:active {
         background-color: white;
         color: #000;
     }
@@ -246,8 +210,6 @@ a.trolley:hover {
         margin-right: 0;
         margin-bottom: 10px;
     }
-
-
 }
 
 .loader-container {
@@ -277,7 +239,6 @@ a.trolley:hover {
     0% {
         transform: rotate(0deg);
     }
-
     100% {
         transform: rotate(360deg);
     }
@@ -287,11 +248,9 @@ a.trolley:hover {
     0% {
         opacity: 1;
     }
-
     99% {
         opacity: 1;
     }
-
     100% {
         opacity: 0;
         visibility: hidden;
