--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -21,6 +21,7 @@ header {
     border-radius: 8px;
     box-shadow: 0 4px 6px rgb(255, 255, 255);
     margin-bottom: 40px;
+    font-family: "Space Grotesk";
 }
 
 h1 {
