--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -4,22 +4,31 @@
     box-sizing: border-box;
 }
 
+
+
 body {
     font-family: 'Arial', sans-serif;
     color: #f5f5f5;
     line-height: 1.6;
     padding: 20px;
     background: linear-gradient(to bottom, #444, #222);
+    font-size: normal;
+    font-style: justify;
 }
+
 
 header {
     background-color: #222;
     padding: 20px;
     text-align: center;
-    position: sticky;
+    margin-right: 2%;
+    width: 98%;
+    position: fixed;
     top: 0;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgb(255, 255, 255);
+    font-family: "Space Grotesk";
+    margin-bottom: 1%;
 }
 
 .container {
@@ -56,7 +65,44 @@ header {
 
 main {
     margin-top: 40px;
+    display: flex;
 }
+
+
+.first-container,
+.third-container {
+    position: fixed;
+    top: 21px;
+    width: 23%;
+    height: auto;
+    z-index: 1;
+    margin-top: 10%;
+}
+
+.first-container {
+    left: 1%;
+}
+
+.third-container {
+    right: 1%;
+}
+
+.first-container img,
+.third-container img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+
+
+.second-container{
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 8%;
+}
+
+
 
 section {
     margin-bottom: 40px;
@@ -134,6 +180,17 @@ p {
     header {
         position: initial;
     }
+
+    .first-container,
+    .third-container {
+        display: none;
+    }
+
+    .second-container {
+        width: 100%;
+        margin-left: 0%;
+    }
+
 }
 
 .loader-container {
