--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -5,7 +5,6 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
     color: #f5f5f5;
     line-height: 1.6;
     padding: 20px;
@@ -42,6 +41,14 @@ h1 {
 
 .bandeau img:hover {
     transform: scale(1.2);
+}
+
+main{
+    font-family: 'Arial', sans-serif;
+    color: #f5f5f5;
+    line-height: 1.6;
+    padding: 20px;
+    background: linear-gradient(to bottom, #444, #222);
 }
 
 section {
