--- a/CSS/style3.css
+++ b/CSS/style3.css
@@ -4,16 +4,12 @@
     box-sizing: border-box;
 }
 
-
-
 body {
     font-family: 'Arial', sans-serif;
     color: #f5f5f5;
     line-height: 1.6;
     padding: 20px;
     background: linear-gradient(to bottom, #444, #222);
-    font-size: normal;
-    font-style: justify;
 }
 
 
@@ -104,7 +100,7 @@ main {
 
 
 
-section {
+.txt {
     margin-bottom: 40px;
     padding: 20px;
     background-color: rgba(27, 27, 27, 0.5);
@@ -112,12 +108,14 @@ section {
     box-shadow: 0 4px 6px rgb(255, 255, 255);
 }
 
-h2 {
+.txt h2 {
     font-size: 2em;
     font-weight: 600;
     color: #fff;
     margin-bottom: 15px;
     text-decoration: underline;
+    font-family: "Space Grotesk";
+    text-align: center;
 }
 
 p {
